--- a/myproject/cmdb/etl/logger_config.ini
+++ b/myproject/cmdb/etl/logger_config.ini
@@ -23,7 +23,7 @@ keys=infohandler,errorhandler
 [handler_infohandler]
 # class=StreamHandler
 class=FileHandler
-level=DEBUG
+level=INFO
 formatter=form02
 # args=(sys.stdout,)
 args=('logs/cmdb_ext.log', 'w')
