fix vc2 license

--- a/myproject/cmdb/etl/logger_config.ini
+++ b/myproject/cmdb/etl/logger_config.ini
@@ -26,7 +26,7 @@ class=FileHandler
 level=INFO
 formatter=form02
 # args=(sys.stdout,)
-args=('logs/cmdb_ext.log', 'w')
+args=('logs/cmdb_ext.log', 'a')
 
 [handler_errorhandler]
 class=FileHandler
